AirBnB Web Static Project

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>AirBnB clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+		<link rel="shortcut icon" href="images/icon.png" >
 
 		<link rel="stylesheet" href="styles/4-common.css"/>
 		<link rel="stylesheet" href="styles/3-header.css"/>
@@ -69,13 +69,13 @@
 					</div>
 					<div class="user"><b>Owner</b>: John Lennon</div>
 					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        This charming apartment features one bedroom and one bathroom, ideal for accommodating up to two guests. Conveniently situated in the heart of Shanghai, it is adjacent to subway line 1, providing easy access to People Square in one stop, the Bund in two stops, and Jingan Temple in three stops
                     </div>
 				</article>
 				<article>
 					<div class="headline">
 						<h2>Tiny house</h2>
-						<div class="price_by_night">$65</div>
+						<div class="price_by_night">$60</div>
 					</div>
 					<div class="information">
                         <div class="max_guest">
@@ -93,13 +93,13 @@
                     </div>
 					<div class="user"><b>Owner</b>: Adrienne</div>
 					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Experience the ease and convenience of this tranquil and centrally situated lodging. Positioned on the second floor within the historic center, just 500 meters from Plaza de Armas. A mere 6-minute walk leads to its location. The accommodation features two double beds, two bedrooms, a bathroom, and a fully separate kitchen-dining area.
                     </div>
 				</article>
 				<article>
 					<div class="headline">
 						<h2>A suite</h2>
-						<div class="price_by_night">$180</div>
+						<div class="price_by_night">$170</div>
 					</div>
 					<div class="information">
                         <div class="max_guest">
@@ -115,15 +115,16 @@
                             <p>2 Bathroom</p>
                         </div>
                     </div>
-					<div class="user"><b>Owner</b>: Betty Holberton</div>
+					<div class="user"><b>Owner</b>: Yemi Ajibade</div>
 					<div class="description">
-						This charming one-bedroom, one-bathroom apartment accommodates two people. Located in the heart of Shanghai, it's adjacent to subway line 1, just one stop from People's Square, two stops from the Lahos, and three stops from the City Centre.
+						Karioka is situated in Cape Town, South Africa, near the southern coast of the Western Cape Peninsula. Nestled amidst serene surroundings, it is bordered by the majestic Atlantic Ocean and the picturesque landscapes of the region. The property is embraced by lush greenery, including indigenous fynbos and a variety of fruit-bearing trees, such as oranges and lemons. Additionally, it overlooks the breathtaking natural reserve of the area, known as the Rio Seco.
 					</div>
 				</article>
 			</section>
 		</div>
 		<footer>
-			<p>Holberton School</p>
+			<p>Best School</p>
 		</footer>
 	</body>
 </html>
+
